# TvShows

./: .gitignore  duh.js  hehe.js
TvShows/: app.json  package-lock.json  package.json
TvShows/android/app/: build.gradle
TvShows/android/app/src/main/: AndroidManifest.xml
TvShows/android/app/src/main/java/com/pbs/tvshows/: MainActivity.java  MainApplication.java  TvShowsPackage.java
TvShows/android/app/src/main/java/com/pbs/tvshows/keyboard/: KeyBoardModule.java
TvShows/android/app/src/main/res/xml/: network_security_config.xml
TvShows/src/: App.js  Home.js  TvChannel.js  TvEpisode.js  TvShow.js  WatchTv.js  styles.js  utils.js
cloudflare_resolver/: Cargo.toml
cloudflare_resolver/src/: lib.rs  resolver_inner.rs  response.rs
mobile_app/: build.gradle  settings.gradle
mobile_app/app/: build.gradle
mobile_app/app/src/main/: AndroidManifest.xml
mobile_app/app/src/main/java/com/pbs/tvshowsapp/: MainActivity.kt
mobile_app/app/src/main/res/layout/: activity_main.xml
mobile_app/app/src/main/res/values/: strings.xml  themes.xml
mobile_app/app/src/main/res/values-night/: themes.xml
mobile_app/gradle/wrapper/: gradle-wrapper.properties
mobile_app/server/: build.gradle
mobile_app/server-rs/: Cargo.toml
mobile_app/server-rs/src/: lib.rs
mobile_app/server/src/main/java/com/pbs/tvshows/server/: TvShowsServer.java
scripts/: tv_logy.js
server/: Cargo.toml
server/src/: channel_logo.rs  cleanup.rs  error.rs  file.rs  http_util.rs  lib.rs  main.rs  media.rs  models.rs  tv_channels.rs  tv_shows.rs  utils.rs  worker.rs
server/src/tv_episodes/: metadata.rs  mod.rs  tv_logy.rs
server/src/tv_episodes/providers/: dailymotion.rs  flash_player.rs  mod.rs  speed.rs  tv_logy.rs
tv_app/: package-lock.json  package.json
tv_app/android/: settings.gradle
tv_app/android/app/src/main/java/com/pbs/tvshows/: MainApplication.java
tv_app/src/: CommonScreens.js  TvShow.js
web/: package-lock.json  package.json
web/public/: index.html
web/public/favicon/: site.webmanifest
web/src/: App.tsx  Channel.tsx  Home.tsx  Parts.tsx  TvShow.tsx  common.tsx  index.tsx  layout.scss  util.ts
