[package]
name = "cloudflare_resolver"
version = "1.0.0"
edition = "2021"


[dependencies]
hyper = "0.14"
reqwest = { version = "*", default-features = false, features = ["json", "rustls-tls"] }

serde = { version = "*", features = ["derive"] }
dashmap = "5"
log = "*"
default-net = "0.21"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }