[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tv_shows_server"
path = "src/main.rs"

[dependencies]
mimalloc = { version = "*", default-features = false }
anyhow = { version = "1", features = ["backtrace"] }
rand = "0"
chrono = "0"
seahash = "0"

tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
futures = "0"

axum = "0"
tower-http = { version = "0", features = ["trace"] }
reqwest = { version = "0", features=["cookies", "brotli", "gzip"] }

url = "2"
form_urlencoded = "1"
scraper = "0"
mime_guess = "2"
base64 = "0"
quick-js = { version = "0", features = ["log"] }

once_cell = "1"
structopt = { version = "0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytes = "1"
curl = "0.4"

[profile.release]
codegen-units = 1
debug = true
lto = true
