[package]
name = "server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tv_shows_server"
path = "src/main.rs"

[dependencies]
mimalloc = { version = "*", default-features = false }
# anyhow = { version = "1", features = ["backtrace"] }
anyhow = "1"
rand = "0"
chrono = "0"
seahash = "0"

tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
futures = "0"

axum = "0"
tower-http = { version = "0", features = ["trace"] }
reqwest = { version = "0", features=["cookies", "brotli", "gzip", "rustls-tls"] }

url = "2"
form_urlencoded = "1"
scraper = "0"
base64 = "0"
quick-js = { version = "0", features = ["log"] }
bytes = "1"

once_cell = "1"
structopt = { version = "0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linked-hash-map = { version = "0", features = ["serde_impl"] }

[profile.release]
codegen-units = 1
debug = false
lto = true
