[package]
name = "server"
version = "2.2.1"
edition = "2021"

[lib]
name = "tv_shows_server"

[[bin]]
name = "tv_shows_server"
path = "src/main.rs"

[dependencies]
mimalloc = { version = "*", default-features = false }
# anyhow = { version = "1", features = ["backtrace"] }
anyhow = "1"
rand = "0"
chrono = "0"
seahash = "0"

tracing = "0"
tracing-subscriber = { version = "0", features = ["env-filter", "time", "local-time"] }

tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }
futures = "0"

axum = "0"
tower-http = { version = "0", features = ["trace"] }
reqwest = { version = "0", default-features = false, features = ["cookies", "brotli", "gzip", "rustls-tls"] }

url = "2"
form_urlencoded = "1"
mime_guess = "2"
scraper = "0"
base64 = "0"
quick-js = { version = "0", features = ["log"] }
bytes = "1"
regex = "1"
include_dir = "0"

once_cell = "1"
structopt = { version = "0", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
linked-hash-map = { version = "0", features = ["serde_impl"] }

[profile.release]
codegen-units = 1
lto = true
strip = true
